sign-up, sign-in function implementation, superbase configuration

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,5 +26,8 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": [
+    "./vite-env.d.ts", //env関係でエラーが出るため追加
+    "src"
+  ]
 }
